--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,12 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 55
-        versionName "1.5.1"
+        versionCode 57
+        versionName "1.5.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testApplicationId = 'cn.vove7.vassistant_test'
+
+        multiDexEnabled true
 
         ndk {//排除其他 abi
             abiFilters "armeabi-v7a"
