修复一加5/5t 安卓P版本在最近任务页面卡顿问题 移除青云客对话系统 修复speak后无法长语音问题 加入无障碍黑名单[实验室/其他]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -235,6 +235,8 @@
         <activity
             android:name=".activities.PluginManagerActivity"
             android:label="@string/text_plugins_manager" />
+        <activity android:name=".activities.AccServiceBlackListManagerActivity"
+            android:label="无障碍黑名单" />
     </application>
 
 </manifest>
