--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,8 +118,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation "com.qihoo360.replugin:replugin-host-lib:${RP_VERSION}"
-//    implementation 'net.dongliu:apk-parser:2.6.4'
-
+    implementation 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
 }
 repositories {
     maven { url 'https://jitpack.io' }
