--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 61
-        versionName "1.5.7"
+        versionCode 62
+        versionName "1.5.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testApplicationId = 'cn.vove7.vassistant_test'
 
@@ -114,11 +114,11 @@ dependencies {
     implementation 'com.github.didikee:AndroidDonate:0.1.0'
     implementation 'com.github.kbiakov:CodeView-android:1.3.1'
     implementation 'com.github.KeepSafe:TapTargetView:1.12.0'
-    implementation 'com.google.zxing:core:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation "com.qihoo360.replugin:replugin-host-lib:${RP_VERSION}"
     implementation 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
+    implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.4'
 }
 repositories {
     maven { url 'https://jitpack.io' }
