--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
-
+//apply from: 'argusapm.gradle'
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.2'
@@ -10,8 +10,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 66
-        versionName "1.6.0"
+        versionCode 67
+        versionName "1.6.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -19,6 +19,8 @@ android {
         ndk {//排除其他 abi
             abiFilters "armeabi-v7a"
         }
+
+        useLibrary 'org.apache.http.legacy'
     }
     buildTypes {
         release {
@@ -76,7 +78,6 @@ repluginHostConfig {
      */
     useAppCompat = true
 }
-
 task makeJar(type: Jar) {
     //指定生成的jar名
     baseName 'vassist-plugin-api2'
@@ -85,7 +86,7 @@ task makeJar(type: Jar) {
     //打包到jar后的目录结构
     into('cn/vove7/')
     //去掉不需要打包的目录和文件
-    exclude( 'BuildConfig.class'/*, 'R.class'*/)
+    exclude('BuildConfig.class'/*, 'R.class'*/)
     //去掉R$开头的文件
     //exclude{ it.name.startsWith('R$');}
 }
@@ -120,6 +121,7 @@ dependencies {
     implementation "com.qihoo360.replugin:replugin-host-lib:${RP_VERSION}"
     implementation 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.4'
+    implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
 }
 repositories {
     maven { url 'https://jitpack.io' }
