--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,17 @@
     <uses-permission
         android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
+
+    <!--ArgusAPM-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -60,15 +71,24 @@
         android:supportsRtl="true"
         android:theme="@style/NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <receiver android:name=".widget.QuickWakeupWidget">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
+        <!--<receiver android:name=".widget.QuickWakeupWidget">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+            <!--</intent-filter>-->
 
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/quick_wakeup_widget_info" />
-        </receiver>
+            <!--<meta-data-->
+                <!--android:name="android.appwidget.provider"-->
+                <!--android:resource="@xml/quick_wakeup_widget_info" />-->
+        <!--</receiver>-->
+        <!--<receiver android:name=".widget.SwitchVoiceWakeupWidget">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+            <!--</intent-filter>-->
+
+            <!--<meta-data-->
+                <!--android:name="android.appwidget.provider"-->
+                <!--android:resource="@xml/quick_wakeup_widget_info" />-->
+        <!--</receiver>-->
 
         <meta-data
             android:name="com.baidu.speech.APP_ID"
@@ -90,6 +110,11 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <!--<provider-->
+            <!--android:name="com.argusapm.android.core.storage.ApmProvider"-->
+            <!--android:authorities="${applicationId}.apm.storage"-->
+            <!--android:exported="false" />-->
+
         <activity android:name=".activities.VoiceTestActivity" />
         <activity
             android:name=".activities.RealMainActivity"
@@ -106,7 +131,7 @@
             <!-- android:resource="@xml/shortcuts" /> -->
         </activity> <!-- <activity android:name=".activities.MainActivity" /> -->
         <activity
-            android:name=".activities.base.CreateShortActivity"
+            android:name=".activities.base.CreateShortcutActivity"
             android:exported="true"
             android:launchMode="singleInstance"
             android:theme="@style/TransparentBackground">
@@ -122,10 +147,10 @@
             android:theme="@style/TransparentBackground">
             <intent-filter>
 
-                <!-- 搜索助手 触发辅助应用 -->
+                <!-- 一加按键设置(搜索助手) 触发辅助应用 -->
                 <action android:name="android.intent.action.ASSIST" />
                 <action android:name="android.search.action.GLOBAL_SEARCH" />
-                <!-- 语音搜索 触发 语音识别 -->
+                <!-- 一加按键设置(语音搜索) 触发 语音识别 -->
                 <action android:name="android.intent.action.VOICE_ASSIST" />
                 <!-- 蓝牙耳机触发 -->
                 <action android:name="android.intent.action.VOICE_COMMAND" />
@@ -234,7 +259,8 @@
         <activity
             android:name=".activities.PluginManagerActivity"
             android:label="@string/text_plugins_manager" />
-        <activity android:name=".activities.AccServiceBlackListManagerActivity"
+        <activity
+            android:name=".activities.AccServiceBlackListManagerActivity"
             android:label="无障碍黑名单" />
     </application>
 
