--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.10'
     ext.kotlin_version = '1.2.60'
     ext.greendao_version = '3.2.2'
-    ext.vtp_version = '0.0.26'
+    ext.vtp_version = '0.0.28'
     ext.support_version = '28.0.0'
     ext.RP_VERSION = '2.3.1'
 
@@ -20,6 +20,7 @@ buildscript {
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
         classpath "com.qihoo360.replugin:replugin-host-gradle:${RP_VERSION}" //RePlugin host
 
+//        classpath 'com.qihoo360.argusapm:argus-apm-gradle:2.0.1.1006'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
