--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 68
-        versionName "1.6.2"
+        versionCode 70
+        versionName "1.6.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -27,6 +27,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue "string", "app_name", "V Assistant"
+            resValue "string", "base_acc_service_label", "V Assist基础服务"
+            resValue "string", "gesture_acc_service_label", "V Assist高级服务（7.0+可用）"
         }
         debug {
             minifyEnabled false
@@ -35,6 +37,8 @@ android {
             jniDebuggable = false
             debuggable = true
             resValue "string", "app_name", "V Assistant-debug"
+            resValue "string", "base_acc_service_label", "V Assist基础DEBUG"
+            resValue "string", "gesture_acc_service_label", "V Assist高级DEBUG"
         }
 //        beta {
 //            versionNameSuffix = '_beta'
