--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ task makeJar(type: Jar) {
     //exclude{ it.name.startsWith('R$');}
 }
 dependencies {
+    def material_version = "1.0.0"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //    implementation 'com.l4digital.fastscroll:fastscroll:1.1.2'
     implementation "com.android.support:appcompat-v7:${support_version}"
@@ -126,6 +128,11 @@ dependencies {
     implementation 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.4'
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
+
+
+    // Material
+//    implementation "com.google.android.material:material:$material_version"
+
 }
 repositories {
     maven { url 'https://jitpack.io' }
