--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -20,6 +20,10 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 greendao {
