--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 80
-        versionName "1.7.0"
+        versionCode 81
+        versionName "1.7.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -109,11 +109,10 @@ dependencies {
     implementation "com.android.support:cardview-v7:${support_version}"
     implementation "com.android.support:palette-v7:$support_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.github.Vove7:VTP:$vtp_version"
     //    implementation 'org.raphets:roundimageview:1.2.0'
     implementation files('libs/bdasr_V3_20180320_9066860.jar')
     implementation project(':executorengine')
-    implementation project(':Common')
+    implementation project(path: ':Common')
     implementation project(path: ':androlua')
     implementation project(path: ':rhino-android')
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
