--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,7 @@
         <activity
             android:name=".activities.base.VoiceAssistActivity"
             android:launchMode="singleInstance"
+            android:exported="true"
             android:theme="@style/TransparentBackground">
             <intent-filter>
 
