--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     implementation 'org.reflections:reflections:0.9.10'
 
     implementation 'nl.dionsegijn:konfetti:1.1.2'
+    implementation 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
 
     // Material
 //    implementation "com.google.android.material:material:$material_version"
