--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -72,10 +72,9 @@ dependencies {
     api 'com.liulishuo.okdownload:sqlite:1.0.5'
     // provide okhttp to connect to backend
     api 'com.liulishuo.okdownload:okhttp:1.0.5'
-
     api 'com.github.GrenderG:Toasty:1.4.1'
 
-    api 'com.github.Vove7:ParamRegexEngine:0.0.3'
+    api project(path: ':ParamRegexEngine')
 }
 
 
