--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 90
-        versionName "1.8.0"
+        versionCode 91
+        versionName "1.8.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -129,7 +129,7 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.4'
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
 
-    implementation 'org.reflections:reflections:0.9.10'
+    testImplementation 'org.reflections:reflections:0.9.10'
 
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     implementation 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
