--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -225,17 +225,22 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
-        <!--<service-->
-        <!--android:name=".services.VoiceInputService"-->
-        <!--android:label="V Assist语音识别输入"-->
-        <!--android:permission="android.permission.BIND_VOICE_INTERACTION">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="android.speech.action.RECOGNIZE_SPEECH" />-->
-        <!--<action android:name="android.speech.action.WEB_SEARCH" />-->
 
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
-        <!--</intent-filter>-->
-        <!--</service>-->
+        <!--助手应用/语音输入 ？ What feature-->
+        <service
+            android:name=".services.VoiceInputService"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:permission="android.permission.BIND_VOICE_INTERACTION">
+            <intent-filter>
+                <action android:name="android.speech.RecognitionService" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="android.speech"
+                android:resource="@xml/recognizer"/>
+        </service>
 
         <activity
             android:name=".activities.PermissionManagerActivity"
