--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 102
-        versionName "1.8.3"
+        versionCode 103
+        versionName "1.8.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
@@ -34,7 +34,7 @@ android {
         debug {
             minifyEnabled false
             applicationIdSuffix ".debug"
-            versionNameSuffix = '_debug'
+            versionNameSuffix = '1'
             jniDebuggable = false
             debuggable = true
             resValue "string", "app_name", "V Assistant-debug"
