接入友盟统计

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,7 @@ dependencies {
 repositories {
     maven { url 'https://jitpack.io' }
     mavenCentral()
+    maven { url 'https://dl.bintray.com/umsdk/release' }
     maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
 
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
