--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     api 'top.zibin:Luban:1.1.8'//鲁班 压缩图片
 
     api project(path: ':ParamRegexEngine')
+    api project(path: ':umlib')
+
 }
 
 
