--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,7 @@ dependencies {
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
 
     testImplementation 'org.reflections:reflections:0.9.10'
+    implementation project(path: ':speechLib')
 
     // Material
 //    implementation "com.google.android.material:material:$material_version"
