--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     api project(path: ':ParamRegexEngine')
     api project(path: ':umlib')
 
+    api 'com.github.Vove7.SmartKey:smartkey-android:6.0.2'
 }
 
 
