--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,7 @@ dependencies {
 
     testImplementation 'org.reflections:reflections:0.9.10'
     implementation project(path: ':speechLib')
+    implementation project(':admin-manager')
 
     // Material
 //    implementation "com.google.android.material:material:$material_version"
