--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,7 @@ dependencies {
 
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.4'
     implementation 'com.github.tiagohm.MarkdownView:library:0.19.0'
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
     testImplementation 'org.reflections:reflections:0.9.10'
     implementation project(path: ':speechLib')
