### 1.9.7 - 支持家居系统：Rokid(若琪) - 去除结束词 - 熄屏语音唤醒自动亮屏 - 调整语音唤醒休眠时长

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 215
-        versionName "1.9.6"
+        versionCode 220
+        versionName "1.9.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
@@ -49,6 +49,8 @@ android {
             resValue "string", "base_acc_service_label", "V Assist基础DEBUG"
             resValue "string", "gesture_acc_service_label", "V Assist高级DEBUG"
             buildConfigField  "String", "UM_KEY", '"5d336b23570df3779c000b49"'
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             manifestPlaceholders = [
                     JPUSH_PKGNAME : "cn.vove7.vassistant.debug",
