--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
 
+        <provider
+            android:name=".InitCp"
+            android:authorities="${applicationId}"
+            android:exported="false" />
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
