VAD_MODEL = touch, 调整gradle, 配置jitpack私有库authToken

--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,16 @@ buildscript {
 allprojects {
     repositories {
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://jitpack.io'
+            credentials { username authToken }
+        }
+        mavenCentral()
+        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         google()
-        jcenter()
     }
-
 }
 
 task clean(type: Delete) {
