--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 android.enableD8.desugaring=true
+authToken=jp_gtmce0qnctplsd7gq3vplil0pf
