--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,7 @@ android {
             }
         }
 //        beta {
-//            versionNameSuffix = '_beta'
-//            applicationIdSuffix = '.beta'
+//            versionNameSuffix = '-beta'
 //        }
     }
     signingConfigs {
@@ -95,14 +94,6 @@ android {
 
 }
 
-apply plugin: 'replugin-host-gradle'
-repluginHostConfig {
-    /**
-     * 是否使用 AppCompat 库
-     * 不需要个性化配置时，无需添加
-     */
-    useAppCompat = true
-}
 task makeJar(type: Jar) {
     //指定生成的jar名
     baseName 'vassist-plugin-api2'
@@ -144,7 +135,6 @@ dependencies {
     implementation 'com.github.KeepSafe:TapTargetView:1.12.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation "com.qihoo360.replugin:replugin-host-lib:${RP_VERSION}"
     implementation 'com.github.pluscubed:recycler-fast-scroll:0.3.2@aar'
 
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.4'
