--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ android {
             manifestPlaceholders = [
                     JPUSH_PKGNAME : "cn.vove7.vassistant.debug",
                     JPUSH_APPKEY : "2a428d87054dcc8b9fd45a30", //JPush 上注册的包名对应的 Appkey.
-                    JPUSH_CHANNEL : "default", //暂时填写默认值即可.
+                    JPUSH_CHANNEL : "default", //暂时填写默认值即可.da
             ]
             ndk {//排除其他 abi
                 abiFilters "armeabi-v7a" ,"x86"
