--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 260
-        versionName "1.9.8.4"
+        versionCode 300
+        versionName "1.9.8.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
@@ -91,7 +91,9 @@ android {
     }
     productFlavors {
     }
-
+    packagingOptions {
+        exclude 'META-INF/proguard/coroutines.pro'
+    }
 }
 
 task makeJar(type: Jar) {
@@ -110,6 +112,8 @@ dependencies {
     def material_version = "1.0.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2')
+
     implementation "com.android.support:appcompat-v7:${support_version}"
     implementation "com.android.support:design:${support_version}"
     implementation "com.android.support:support-v4:${support_version}"
@@ -146,6 +150,8 @@ dependencies {
     implementation project(':admin-manager')
     implementation project(':push')
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     // Material
 //    implementation "com.google.android.material:material:$material_version"
 
