--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,6 +152,7 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation "com.github.infotech-group:android-drawable-dsl:0.3.0"
     // Material
 //    implementation "com.google.android.material:material:$material_version"
 
